# KIJProject

./: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.a334801  Makefile  README.md  aes.cpp  aes.h  bitmap.h  cmake_install.cmake  commprotocol.cpp  commprotocol.h  data.txt  encrypted_BLUE_file.txt  encrypted_GREEN_file.txt  encrypted_RED_file.txt  encrypted_file.txt  libaes.cpp  libaes.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  nativeaes.cpp  nativeaes.h  nativeaesdecrypt.cpp  nativeaesdecrypt.h  rsa.cpp  rsa.h
KIJ-openssl/: aes.cpp  bitmap.cpp  main  makefile  private.pem  private_key.pem  public.pem  public_key.pem  rsa  rsa.cpp  rsa.h
KIJ-openssl/main.dSYM/Contents/Resources/DWARF/: main
KIJ-openssl/rsa.dSYM/Contents/Resources/DWARF/: rsa
build-KIJProject-Qt_6_2_2_homebrew/: CMakeCache.txt  cmake_install.cmake  qtcsettings.cmake
build-KIJProject-Qt_6_2_2_homebrew/.cmake/api/v1/reply/: cache-v2-2497259ba261b70e7b1c.json  cache-v2-c44daca2b26792db29f9.json  cmakeFiles-v1-14c841a8463f903bb2b0.json  cmakeFiles-v1-ca4b5e16e7fda5a25593.json  codemodel-v2-b8cd9ab1ca25385edf30.json  codemodel-v2-eda7379b23c46fd42baf.json  directory-Qt-Secret-RelWithDebInfo-9fc5fd5fb8d35346e6a2.json  directory-Qt-Secret.Qt-Secret-GUI-MinSizeRel-466d99b96f6af0f60c15.json  directory-Qt-Secret.src-Debug-497011bec304288bba10.json  directory-Qt-Secret.src.mini-gmp-MinSizeRel-a6276d8f9fa6b7503a97.json  directory-Qt-Secret.src.mini-gmp.src-MinSizeRel-08d842c2c316d1b3c1f0.json  directory-Qt-Secret.src.mini-gmp.tests-Debug-af1e12122b249e822a08.json  directory-Qt-Secret.tests-Release-8662607a68ca0cf10a8c.json  index-2022-03-28T22-43-12-0492.json  index-2022-04-04T18-46-30-0765.json  target-AES-KIJ-Debug-b353f2a818aeab7a9d1e.json  target-AES-KIJ-Debug-c1a29ae186309b01d218.json  target-AES-KIJ-MinSizeRel-3c64e1109b9e9f9dde6a.json  target-AES-KIJ-MinSizeRel-f06edabdcab71d7505b7.json  target-AES-KIJ-RelWithDebInfo-81604ac3217041e5e567.json  target-AES-KIJ-RelWithDebInfo-9881be4674180f28b801.json  target-AES-KIJ-Release-4b34b342ab5ec86792fe.json  target-AES-KIJ-Release-4dec3aa1f7bd90bf4c46.json  target-AES-KIJ_autogen-Debug-912dd99a770178ef8d38.json  target-AES-KIJ_autogen-MinSizeRel-8c5c2fbbcc880f898d18.json  target-ALL_BUILD-MinSizeRel-08e7d23455dc1239be55.json  target-ALL_BUILD-MinSizeRel-a94f900d3f5d9e1d81d1.json  target-ALL_BUILD-RelWithDebInfo-48f15d58cb160332c531.json  target-ALL_BUILD-RelWithDebInfo-ea0dd0a49bfcfe7425c7.json  target-Qt-Secret-Debug-622a9eb74fa7b88fd9b9.json  target-Qt-Secret-GUI-Debug-c58adf20738fbe29e679.json  target-Qt-Secret-GUI-MinSizeRel-c2aee6781b2308abb04e.json  target-Qt-Secret-GUI-RelWithDebInfo-90870431a7f1b329c5ea.json  target-Qt-Secret-GUI-Release-bf0e45803078116c38c5.json  target-Qt-Secret-GUI_autogen-RelWithDebInfo-95dbf9be001140d3d1a3.json  target-Qt-Secret-MinSizeRel-d0da4f2107621b1ca3d8.json  target-Qt-Secret-RelWithDebInfo-ad406522259486621a31.json  target-Qt-Secret-Release-f163ea0a80f333620f38.json  target-Qt-SecretTest_AES-Debug-00c413816b88520b1461.json  target-Qt-SecretTest_AES-MinSizeRel-8fc3339e520df3add311.json  (+32 more)
build-KIJProject-Qt_6_2_2_homebrew/AES-KIJ.build/Debug/AES-KIJ_autogen.build/: Script-7A33FA6D7C0E070E03570D93.sh
build-KIJProject-Qt_6_2_2_homebrew/AES-KIJ.build/Debug/ALL_BUILD.build/: Script-4DC5045142B8B1E699CF540F.sh
build-KIJProject-Qt_6_2_2_homebrew/AES-KIJ.build/Debug/ZERO_CHECK.build/: Script-D1EBF3D166F8C9BA1DF1FE2C.sh
build-KIJProject-Qt_6_2_2_homebrew/AES-KIJ.xcodeproj/: project.pbxproj
build-KIJProject-Qt_6_2_2_homebrew/AES-KIJ_autogen/: moc_predefs_Debug.h
build-KIJProject-Qt_6_2_2_homebrew/AES-KIJ_autogen/include_Debug/: ui_mainwindow.h
build-KIJProject-Qt_6_2_2_homebrew/AES-KIJ_autogen/include_Debug/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
build-KIJProject-Qt_6_2_2_homebrew/CMakeScripts/: ReRunCMake.make
build-KIJProject-Qt_6_2_2_homebrew/Debug/AES-KIJ.app/Contents/: Info.plist
build-KIJProject-Qt_6_2_2_homebrew/Debug/AES-KIJ.app/Contents/MacOS/: AES-KIJ
build-KIJProject-Qt_6_2_2_homebrew/Qt-Secret/: cmake_install.cmake
build-KIJProject-Qt_6_2_2_homebrew/Qt-Secret/CMakeScripts/: ReRunCMake.make
build-KIJProject-Qt_6_2_2_homebrew/Qt-Secret/Qt-Secret-GUI/: cmake_install.cmake
build-KIJProject-Qt_6_2_2_homebrew/Qt-Secret/Qt-Secret-GUI/Debug/: Qt-Secret-GUI
build-KIJProject-Qt_6_2_2_homebrew/Qt-Secret/Qt-Secret-GUI/Qt-Secret-GUI_autogen/: moc_predefs_Debug.h  mocs_compilation.cpp
build-KIJProject-Qt_6_2_2_homebrew/Qt-Secret/Qt-Secret.xcodeproj/: project.pbxproj
build-KIJProject-Qt_6_2_2_homebrew/Qt-Secret/src/: cmake_install.cmake
build-KIJProject-Qt_6_2_2_homebrew/Qt-Secret/src/Debug/: libQt-Secret.1.3.1.dylib  libQt-Secret.dylib
build-KIJProject-Qt_6_2_2_homebrew/Qt-Secret/src/Qt-Secret_autogen/: moc_predefs_Debug.h  mocs_compilation.cpp
build-KIJProject-Qt_6_2_2_homebrew/Qt-Secret/src/mini-gmp/: cmake_install.cmake
build-KIJProject-Qt_6_2_2_homebrew/Qt-Secret/src/mini-gmp/CMakeScripts/: ReRunCMake.make
build-KIJProject-Qt_6_2_2_homebrew/Qt-Secret/src/mini-gmp/QtBigint.xcodeproj/: project.pbxproj
build-KIJProject-Qt_6_2_2_homebrew/Qt-Secret/src/mini-gmp/src/: cmake_install.cmake
build-KIJProject-Qt_6_2_2_homebrew/Qt-Secret/src/mini-gmp/tests/: cmake_install.cmake
build-KIJProject-Qt_6_2_2_homebrew/Qt-Secret/tests/: cmake_install.cmake
build-KIJProject-Qt_6_2_2_homebrew/Qt-Secret/tests/Debug/: Qt-SecretTest_AES  Qt-SecretTest_RSA
build-KIJProject-Qt_6_2_2_homebrew/Qt-Secret/tests/Qt-SecretTest_AES_autogen/: moc_predefs_Debug.h  mocs_compilation.cpp
build-KIJProject-Qt_6_2_2_homebrew/Qt-Secret/tests/Qt-SecretTest_RSA_autogen/: moc_predefs_Debug.h
emailSendingScript/: data.txt  emailScript.ipynb  receiveScript.py  sendingScript.py
(+65 files in other folders)
